update tests to new shapes syntax

--- a/unittest-files/match-positive.css
+++ b/unittest-files/match-positive.css
@@ -5,16 +5,12 @@
     shape-outside: circle();
     clip-path: circle();
     shape-inside: circle();
-    shape-inside: circle(0, 0, 0);
-    shape-inside: circle(0px, 0px, 0px);
-    shape-inside: circle(0px, 0, 0%);
+    shape-inside: circle(0 at 0 0);
+    shape-inside: circle(0px at 0px 0px);
+    shape-inside: circle(0px at 0 0%);
     shape-inside: ellipse();
-    shape-inside: ellipse(0, 0, 0, 0);
-    shape-inside: ellipse(0, 0);
-    shape-inside: rectangle();
-    shape-inside: rectangle(0, 0, 100px, 100px);
-    shape-inside: rectangle(0, 0, 100px, 100px, 50%, 50%);
-    shape-inside: rectangle(0, 0, 100px, 100px, 50%);
+    shape-inside: ellipse(0 0 at 0 0);
+    shape-inside: ellipse(0 0);
     shape-inside: polygon();
     shape-inside: polygon(0 0, 100px 0, 100px 100px);
     shape-inside: polygon(nonzero, 0 0, 100px 0, 100px 100px);
