--- a/unittest-files/match-positive.css
+++ b/unittest-files/match-positive.css
@@ -4,7 +4,7 @@
     shape-inside: circle();
     shape-outside: circle();
     clip-path: circle();
-    shape-inside: circle();
+    shape-inside: circle() ; /* intentional whitespace */
     shape-inside: circle(0 at 0 0);
     shape-inside: circle(0px at 0px 0px);
     shape-inside: circle(0px at 0 0%);
