update tests for matching prefixed properties

--- a/unittest-files/match-negative.css
+++ b/unittest-files/match-negative.css
@@ -1,5 +1,5 @@
 .negative-match {
-    -webkit-shape-inside: circle();
+    clip-path: circle();
 /*  shape-inside: circle(); */
     shape-inside: circle;
 }
